# uywi

./: .gitignore  Cargo.toml  Makefile-internals.toml  Makefile.toml  rustfmt.toml
.cargo/: config  config.toml
docs/: index.html  style.css  uywi-web.js  uywi-web_bg.wasm  uywi.js  uywi.wasm  uywi_bg.wasm  uywi_web.js  uywi_web_bg.wasm
src/: concept.rs  lib.rs  word.rs
uywi/: Cargo.toml
uywi-web/: Cargo.toml  Makefile.toml
uywi-web/src/: dictionary.rs  home.rs  lib.rs  main.rs  translator.rs  util.rs
uywi/docs/: uywi_web.js  uywi_web_bg.wasm
uywi/docs/snippets/uywi-web-b0bfa2633379b22e/: inline0.js
uywi/src/: accent.rs  concept.rs  config.rs  length.rs  lib.rs  page.rs  row.rs  script.rs  stem.rs  structure.rs  util.rs  word.rs
uywi/src/accent/: ipa_peter.rs  uywi_chiffre.rs
uywi/src/script/: ipa_peter.rs  uywi_chiffre.rs
uywi/tests/: tests.rs
www/: index.html
