[package]
name = "uywi"
version = "0.1.0"
authors = ["daxpedda <daxpedda@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlButtonElement',
  'HtmlSpanElement',
  'HtmlFormElement',
  'HtmlTableElement',
  'HtmlTableRowElement',
  'HtmlCollection',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'console',
  'Event',
  'EventTarget'
]

#[profile.release]
#lto = true

# cargo build --release
# wasm-bindgen --no-typescript --no-modules target/wasm32-unknown-unknown/release/uywi.wasm --out-dir docs
