[package]
name = "uywi"
version = "0.1.0"
authors = ["daxpedda <daxpedda@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = ">= 0.2"
wee_alloc = ">= 0.4"
console_error_panic_hook = ">= 0.1"

[dependencies.web-sys]
version = ">= 0.3"
features = [
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlButtonElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlLinkElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "Node",
  "Window"
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

# cargo build --release
# wasm-bindgen --no-typescript --no-modules --browser target/wasm32-unknown-unknown/release/uywi.wasm --out-dir docs
# wasm-opt -Os -o docs/uywi.wasm docs/uywi_bg.wasm
# del /F "docs\uywi_bg.wasm"
