[package]
name = "uywi-web"
version = "0.1.0"
authors = ["daxpedda <daxpedda@gmail.com>"]
edition = "2018"
description = "UYWI word generator frontend."

[dependencies]
log = { version = "0.4.8", features = ["release_max_level_off"] }
seed = "0.4.2"
uywi = { path = "../uywi"}
wasm-bindgen = "0.2.54"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.31"
features = [
	"FormData",
	"HtmlFormElement",
	"HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.4"
