[package]
name = "uywi-web"
version = "0.1.0"
authors = ["daxpedda <daxpedda@gmail.com>"]
edition = "2018"
description = "UYWI word generator frontend."

[dependencies]
log = { version = "0.4", features = ["release_max_level_off"] }
seed = "0.6"
uywi = { path = "../uywi"}
wasm-bindgen = "0.2"
wasm-logger = "0.2"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
	"FormData",
	"HtmlFormElement",
	"HtmlInputElement",
	"HtmlTextAreaElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
