[package]
name = "uywi"
version = "0.1.0"
authors = ["daxpedda <daxpedda@gmail.com>"]
edition = "2018"
description = "UYWI word generator frontend."

[dependencies]
array-init = "0.1.1"
arrayvec = "0.5.1"
log = "0.4.8"
num = "0.2.0"
thiserror = "1.0.5"
unicode-segmentation = "1.6.0"

[dev-dependencies]
rayon = "1.2.0"
