[package]
name = "uywi"
version = "0.1.0"
authors = ["daxpedda <daxpedda@gmail.com>"]
edition = "2018"
description = "UYWI word generator frontend."

[dependencies]
array-init = "0.1"
arrayvec = "0.5"
log = "0.4"
num = "0.2"
thiserror = "1"
unicode-segmentation = "1"

[dev-dependencies]
rayon = "1"
